@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020130105"
-#define public MagickPackageReleaseDate "snapshot-20130105"
+#define public MagickPackageVersionAddendum ".020130106"
+#define public MagickPackageReleaseDate "snapshot-20130106"
