@@ -1,5 +1,5 @@
 /*
-% Copyright (C) 2003 - 2012 GraphicsMagick Group
+% Copyright (C) 2003-2013 GraphicsMagick Group
 % Copyright (C) 2002 ImageMagick Studio
 % Copyright 1991-1999 E. I. du Pont de Nemours and Company
 %
@@ -182,11 +182,18 @@ MagickExport void * MagickMalloc(const size_t size)
 %  This function is intended for allocating special-purpose buffers
 %  which benefit from specific alignment.
 %
+%  The allocated memory should only be freed using MagickFreeAligned()
+%  and may not be reallocated.
+%
 %  The format of the  MagickMallocAligned method is:
 %
 %      void * MagickMallocAligned(size_t alignment, const size_t size)
 %
 %  A description of each parameter follows:
+%
+%
+%    o alignment: The alignment of the base and size of the allocated
+%                 memory.
 %
 %    o size: The size of the memory in bytes to allocate.
 %
@@ -232,6 +239,68 @@ MagickExport void * MagickMallocAligned(const size_t alignment,const size_t size
 #endif
 
   return alligned_p;
+}
+
+/*
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%                                                                             %
+%                                                                             %
+%                                                                             %
++   M a g i c k M a l l o c A l i g n e d A r r a y                           %
+%                                                                             %
+%                                                                             %
+%                                                                             %
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%
+%  MagickMallocAlignedArray() returns a pointer to a block of memory of
+%  sufficient size to support an array of elements of a specified size.
+%  The allocation's base address is an even multiple of the specified
+%  alignment.  The size of the buffer allocation is rounded up as required
+%  in order to consume a block of memory starting at least at the requested
+%  alignment and ending at at least the requested alignment.
+%
+%  NULL is returned if the required memory exceeds the range of size_t,
+%  the computed size is zero, or there is insufficient memory available.
+%
+%  This function is intended for allocating special-purpose buffers
+%  which benefit from specific alignment.
+%
+%  The allocated memory should only be freed using MagickFreeAligned()
+%  and may not be reallocated.
+%
+%  The format of the MagickMallocArray method is:
+%
+%      void *MagickMallocAlignedArray(const size_t alignment,
+%                                     const size_t count,
+%                                     const size_t size);
+%
+%  A description of each parameter follows:
+%
+%    o alignment: The alignment of the base and size of the allocated
+%                 memory.
+%
+%    o count: The number of elements in the array.
+%
+%    o size: The size of one array element.
+%
+*/
+MagickExport void *MagickMallocAlignedArray(const size_t alignment,
+                                            const size_t count,
+                                            const size_t size)
+{
+  size_t
+    allocation_size;
+
+  void
+    *allocation;
+
+  allocation = (void *) NULL;
+  allocation_size=MagickArraySize(count,size);
+
+  if (allocation_size)
+    allocation = MagickMallocAligned(alignment,allocation_size);
+
+  return allocation;
 }
 
 /*
