@@ -36,6 +36,17 @@
 <div class="document">
 
 
+<p>2013-01-06  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
+<blockquote>
+<ul class="simple">
+<li>magick/memory.h (MagickAllocateAlignedArray): New macro to wrap
+use of MagickMallocAlignedArray().</li>
+<li>magick/memory.c (MagickMallocAlignedArray): New private function
+to support safe allocation of an array in memory with a specified
+alignment.  Allocation may only be freed using MagickFreeAligned()
+and the allocation may not be reallocated.</li>
+</ul>
+</blockquote>
 <p>2013-01-05  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
